--- a/f/css/main.less
+++ b/f/css/main.less
@@ -4619,6 +4619,18 @@ textarea {
       display: block;
     }
   }
+  &__vol {
+    font-size: 12px;
+    color: #fff;
+    height: 12px;
+    position: absolute;
+    bottom: 110px;
+    left: 0;
+    opacity: .5;
+    font-weight: bold;
+    right: 0;
+    margin: 0 auto;
+  }
   &_solutions &__img {
     background: #e6e6e6;
     margin-bottom: 15px;
